# cg_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app  create  run  shading_file_tokens.h  test.binary
__new/: CMakeLists.txt  test.cpp
__new/dependencies/glfw/: cmake_uninstall.cmake
__new/dependencies/glfw/docs/: Doxyfile
__new/examples/basic_application/: basic_application.cpp
__new/include/: cg_sandbox.h  core.h
__new/include/mathematics/: mathematics.h
__new/include/utils/: file_utils.h
__new/include/world/: world.h
__new/include/world/entity_system/: entity_system.h
__new/include/world/entity_system/standard_aspects/: standard_aspects.h
__new/include/world/graphics/painting/: painting.h
__new/include/world/resources/: resources.h
__new/lib/interactive_graphics_context/: interactive_graphics_context.h
__new/lib/mathematics/: CMakeLists.txt  mathematics.cpp  mathematics.h
__new/lib/mathematics/spatial_algebra/: vec.h
__new/lib/opengl_utilities/: CMakeLists.txt  README.md  gl_shader_program.h  glsl.cpp
__new/lib/reflector/: CMakeLists.txt  reflector.h
__new/lib/table/: CMakeLists.txt  table.cpp  table.h  table_collection.cpp
__new/src/: CMakeLists.txt
__new/src/world/: world.cpp
__new/src/world/entity_system/: entity_system.cpp
__new/src/world/entity_system/standard_aspects/: Behaviour.cpp  Camera.cpp  Transform.cpp
apps/_schematic/: _schematic.cpp
apps/a_world/: a_world.cpp
apps/bspline_demo/: bspline_demo.cpp
apps/computed_tomography/: ARTReconstructor.cpp  SARTReconstructor.cpp  computed_tomography.cpp  computed_tomography.h  scrap.txt  sinogram.cpp
apps/correspondence/: correspondence.cpp
apps/dragons/: dragons.cpp  entities.h
apps/fluid_2D/: fluid_2D.cpp
apps/mesh_processing/: mesh_processing.cpp
apps/portals/: portals.cpp
apps/shadows/: shadows.cpp
apps/subdivision/: subdivision.cpp  weights_4.txt
apps/surfaces/: automatic_differentiation.h  curvature.frag  curvature.vert  surfaces.cpp
apps/visualization/: visualization.cpp
apps_shared/behaviours/: .CameraController.backup  CameraController.cpp  CameraController.h  CameraController.serialize.cpp  CameraController.serialize.h  Trackball.cpp
apps_shared/objects/: cameraman.cpp  mesh_object.cpp  object_viewer_cameraman.cpp
apps_shared/utils/: force_aspect_ratio.cpp
core/: cg_sandbox.h  core.h  main.cpp  renderingvertex_arrays.serialize.h
core/__misc_storage/: gl_input.cpp  indices_mesh  models.cpp  models.h  world_with_export_stuff.cpp  world_with_export_stuff.h
core/assets/: assets.h  model_assets.cpp  model_assets.h  models.cpp  models.h  shading_assets.h
core/data_structures/: .table.backup  table.cpp  table.h  table.serialize.cpp  table.serialize.h  table_collection.cpp  table_collection.h
core/entity_model/: .entity_model.backup  entity_model.cpp  entity_model.h  entity_model.serialize.cpp  (+1 more)
core/gl/: gl.h  (+4 more)
lib/interactive_graphics_context/: CMakeLists.txt  input.cpp  input.h  interactive_graphics_context.cpp  interactive_graphics_context.h
lib/interactive_graphics_context/gl/: gl_shader_program.h
lib/interactive_graphics_context/platform/: platform_glfw.cpp
lib/ray_tracer/: CMakeLists.txt  ray_tracer.hpp
lib/ray_tracer/scenes/: simple.cpp
lib/ray_tracer/src/: aggregates.hpp  gl.hpp  illumination.hpp  imaging.hpp  mathematics.hpp  models.hpp  primitives.hpp  renderer.hpp  scene.hpp  shapes.hpp  shapes_library.hpp  textures.hpp
lib/ray_tracer/src/aggregates/: bvh.cpp  bvh.hpp  primitive_list.cpp  primitive_list.hpp
lib/ray_tracer/src/gl/: gl_texture.hpp
lib/ray_tracer/src/illumination/: light.cpp  light.hpp  point_light.cpp  point_light.hpp
lib/ray_tracer/src/imaging/: camera.hpp  framebuffer.cpp  framebuffer.hpp
lib/ray_tracer/src/interaction/: player.cpp
lib/ray_tracer/src/mathematics/: geometry.cpp  geometry.hpp  numerics.cpp  numerics.hpp  transform.cpp  transform.hpp
lib/ray_tracer/src/models/: models.cpp
lib/ray_tracer/src/primitives/: primitives.cpp
lib/ray_tracer/src/renderer/: renderer.cpp
lib/ray_tracer/src/scene/: scene.cpp
lib/ray_tracer/src/shapes/: plane.cpp  plane.hpp  shapes.cpp  sphere.cpp  sphere.hpp
lib/ray_tracer/src/textures/: textures.cpp
resources/: color.mat  color2.mat  color_shading.sm  gencode.txt  phong_tessellated_triangle_mesh.gmat  test.gmat  triangle_mesh.gmat  triangle_mesh2.gmat
shaders/: postprocessing_quad.vert  summed_area_table.frag  summed_area_table.vert  uniform_color.mat
src/: CMakeLists.txt  cg_sandbox.cpp  cg_sandbox.h  cg_sandbox_testing.cpp  core.h  gl.h  main.cpp
src/__misc_storage/: 1_cg_sandbox.cpp
src/__misc_storage/parallel/: parallel.h
src/assets/: assets.h  models.cpp  models.h
src/data_structures/: \  table.cpp  table.h
src/entity_model/: aspect.h  entity_model.cpp  entity_model.h
src/gl/: gl.cpp  gl.h  gl_shader_program.cpp  gl_shader_program.h  glsl.h
src/input/: input.cpp  input.h
src/mathematics/: mat4x4.h  mathematics.cpp  mathematics.h  quaternion.h  vec3_vec4.h
src/parallel/: parallel.cpp
src/rendering/: drawing.cpp  drawing.h  glsl.cpp  glsl.h  rendering.cpp  rendering.h  shading.cpp  shading.h  shading_file.cpp  shading_file.l  shading_file.y  shading_file_specification.txt  vertex_arrays.cpp  vertex_arrays.h
src/rendering/old/: rendering.cpp  shading_file.cpp  shading_file.l
src/rendering/shading_file/: shading_file.h  shading_file.l
src/resource_model/: assets.h  resource_model.cpp  resource_model.h
src/standard_aspects/: Camera.cpp  Transform.cpp  standard_aspects.h
src/world/: world.cpp  world.h
src/world/entity_system/: entity_system.cpp
src/world/entity_system/standard_aspects/: Camera.cpp
src/world/graphics/: graphics.cpp
src/world/graphics/painting/: painting.cpp
src/world/graphics/painting/2D/: curves.cpp  lines.cpp
src/world/graphics/painting/3D/: lines.cpp  wireframes.cpp
src/world/input/: input.h
src/world/resources/: resources.cpp
src/world/standard_aspects/: Transform.cpp  standard_aspects.h
testing/: test_tables  test_tables.cpp  test_tables.sh
to_be_organized/: app
(+494 files in other folders)
